# rustchord

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  TODO.md  build.rs  main
examples/: audioinput.rs
old/bindings/: decompose.rs  dft.rs  filter.rs  notefinder.rs  outdrivers.rs
src/: lib.rs  main.rs
src/bindings/: color.rs  configs.rs  hook.rs  mod.rs  parameters.rs
