[package]
name = "rustchord"
version = "0.1.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
license-file = "LICENSE.md"
keywords = ["colorchord", "audio"]
categories = ["multimedia::audio", "api-bindings"]


[lib]
name = "rustchord"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"
bindgen = "0.56.0"

[dependencies]
palette = "0.5.0"

[dev-dependencies]
piston_window = "0.116.0"
cpal = "0.13.1"
