[package]
name = "rustchord"
version = "0.5.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2018"
license-file = "LICENSE.md"
keywords = ["colorchord", "audio"]
categories = ["multimedia::audio", "api-bindings"]
description = "Colorchord bindings for Rust"


[lib]
name = "rustchord"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"
bindgen = "0.59.2"

[dependencies]
palette = "0.6.0"
thiserror = "1.0.22"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
piston_window = "0.121.0"
cpal = "0.13.1"
