[package]
name = "rustchord"
version = "0.5.1-alpha.0"
authors = ["coral <jonas@jonasbengtson.se>"]
edition = "2024"
license-file = "LICENSE.md"
keywords = ["colorchord", "audio"]
categories = ["multimedia::audio", "api-bindings"]
description = "Colorchord bindings for Rust"


[lib]
name = "rustchord"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.66"
bindgen = "0.72.1"

[dependencies]
libc = "0.2"
palette = "0.7.6"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
piston_window = "0.146.0"
cpal = "0.17.3"
